--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.5",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
