--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@tsparticles/react": "^3.0.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.7",
+    "jquery": "^3.7.1",
+    "jquery-circle-progress": "^1.2.2",
     "node": "^18.20.7",
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-circular-progressbar": "^2.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
